--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Jurnal de Tranzactionare</h1>
+            <h1>Jurnal </h1>
             <p>Scoala de Tranzactionare</p>
         </div>
 
