--- a/index.html
+++ b/index.html
@@ -1343,8 +1343,8 @@ function updateTable() {
             // If it's a full timestamp (contains 'T'), extract time
             if (timeStr.includes('T')) {
                 const date = new Date(timeStr);
-                const hours = String(date.getUTCHours()).padStart(2, '0');
-                const minutes = String(date.getUTCMinutes()).padStart(2, '0');
+                const hours = String(date.getHours()).padStart(2, '0');
+                const minutes = String(date.getMinutes()).padStart(2, '0');
                 return `${hours}:${minutes}`;
             }
             
