--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading Journal - Live</title>
+    <title>The5%ers HighStake - Trading Journal</title>
     <style>
         * {
             margin: 0;
@@ -471,17 +471,18 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="index.html" style="text-decoration: none; display: flex; align-items: center; gap: 15px;">
-                <div style="font-size: 3em; line-height: 1; cursor: pointer; transition: transform 0.3s ease;" 
-                     onmouseover="this.style.transform='scale(1.1) rotate(5deg)'" 
-                     onmouseout="this.style.transform='scale(1) rotate(0deg)'">
-                    📈
+            <div style="text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 20px; flex-wrap: wrap;">
+                <div style="background: linear-gradient(135deg, #4d9fff, #3d7fff); padding: 15px 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(77, 159, 255, 0.4);">
+                    <h2 style="margin: 0; font-size: 2.5em; color: #fff; font-weight: 900; letter-spacing: -1px;">
+                        The<span style="color: #00cc88;">5</span>%ers
+                    </h2>
                 </div>
-                <div>
-                    <h1 style="margin: 0;">Trading Journal</h1>
-                    <p style="margin: 0;">Powered by Alessio</p>
+                <div style="text-align: center;">
+                    <h1 style="margin: 0;">HighStake Challenge</h1>
+                    <p style="margin: 5px 0 0 0; font-size: 1.2em; color: #4d9fff; font-weight: 600;">$10,000 Account</p>
+                    <p style="margin: 3px 0 0 0; font-size: 0.9em;">Professional Trading Journal</p>
                 </div>
-            </a>
+            </div>
         </div>
 
         <div class="nav-buttons">
@@ -937,10 +938,10 @@
 
     <!-- Strategy Modal -->
     <div class="loading-overlay" id="strategyModal" style="display: none;">
-        <div style="background: linear-gradient(135deg, rgba(26, 26, 42, 0.98), rgba(15, 30, 58, 0.98)); padding: 40px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5); max-width: 700px; width: 90%; max-height: 85vh; overflow-y: auto; border: 2px solid rgba(156, 39, 176, 0.5);">
+        <div style="background: linear-gradient(135deg, rgba(26, 26, 42, 0.98), rgba(15, 30, 58, 0.98)); padding: 40px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5); max-width: 800px; width: 90%; max-height: 85vh; overflow-y: auto; border: 2px solid rgba(156, 39, 176, 0.5);">
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
                 <h2 style="color: #9c27b0; margin: 0; font-size: 2em; display: flex; align-items: center; gap: 12px;">
-                    <span style="font-size: 1.2em;">📚</span> Trading Strategy
+                    <span style="font-size: 1.2em;">📚</span> My Trading Strategy
                 </h2>
                 <button onclick="closeStrategyModal()" style="background: rgba(255, 107, 107, 0.2); color: #ff6b6b; border: 2px solid #ff6b6b; width: 40px; height: 40px; border-radius: 50%; cursor: pointer; font-size: 1.5em; font-weight: bold; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center;" onmouseover="this.style.background='rgba(255, 107, 107, 0.4)'" onmouseout="this.style.background='rgba(255, 107, 107, 0.2)'">
                     ×
@@ -954,9 +955,14 @@
                         <span style="background: #9c27b0; color: #fff; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9em; font-weight: bold;">1</span>
                         Daily Fractal - Long Term Direction
                     </h3>
-                    <p style="margin: 0; color: #ccc;">
+                    <p style="margin: 0 0 15px 0; color: #ccc;">
                         Folosesc <strong>Daily Fractal</strong> pentru a identifica direcția long-term a pieței. Dacă fractalul Daily arată o tendință bullish, caut oportunități LONG. Dacă arată bearish, caut oportunități SHORT.
                     </p>
+                    <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                        <button onclick="window.open('https://i.imgur.com/your-daily-fractal-image.png', '_blank')" style="background: rgba(77, 159, 255, 0.2); border: 2px solid #4d9fff; color: #4d9fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 0.9em; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='rgba(77, 159, 255, 0.3)'" onmouseout="this.style.background='rgba(77, 159, 255, 0.2)'">
+                            📸 View Example
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Strategy Step 2 -->
@@ -965,9 +971,14 @@
                         <span style="background: #9c27b0; color: #fff; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9em; font-weight: bold;">2</span>
                         Daily Supply/Demand Zones
                     </h3>
-                    <p style="margin: 0; color: #ccc;">
+                    <p style="margin: 0 0 15px 0; color: #ccc;">
                         Identific zonele cheie de <strong>Supply</strong> (vânzători) și <strong>Demand</strong> (cumpărători) pe timeframe-ul Daily. Acestea reprezintă nivelurile importante unde prețul poate reacționa puternic.
                     </p>
+                    <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                        <button onclick="window.open('https://i.imgur.com/your-supply-demand-image.png', '_blank')" style="background: rgba(77, 159, 255, 0.2); border: 2px solid #4d9fff; color: #4d9fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 0.9em; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='rgba(77, 159, 255, 0.3)'" onmouseout="this.style.background='rgba(77, 159, 255, 0.2)'">
+                            📸 View Example
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Strategy Step 3 -->
@@ -976,9 +987,14 @@
                         <span style="background: #9c27b0; color: #fff; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9em; font-weight: bold;">3</span>
                         4H Fractal - Confirmation
                     </h3>
-                    <p style="margin: 0; color: #ccc;">
+                    <p style="margin: 0 0 15px 0; color: #ccc;">
                         Aștept confirmarea pe <strong>4H Fractal</strong> înainte de a intra în tranzacție. Acest timeframe oferă confirmarea că mișcarea va continua în direcția identificată pe Daily.
                     </p>
+                    <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                        <button onclick="window.open('https://i.imgur.com/your-4h-fractal-image.png', '_blank')" style="background: rgba(77, 159, 255, 0.2); border: 2px solid #4d9fff; color: #4d9fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 0.9em; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='rgba(77, 159, 255, 0.3)'" onmouseout="this.style.background='rgba(77, 159, 255, 0.2)'">
+                            📸 View Example
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Strategy Step 4 -->
@@ -987,18 +1003,26 @@
                         <span style="background: #9c27b0; color: #fff; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9em; font-weight: bold;">4</span>
                         Liquidity Sweep
                     </h3>
-                    <p style="margin: 0; color: #ccc;">
+                    <p style="margin: 0 0 15px 0; color: #ccc;">
                         Caut <strong>Liquidity Sweeps</strong> - momentele când prețul elimină liquidity-ul de pe anumite niveluri (stop-loss-uri ale retailului) înainte de a face mișcarea principală. Acesta este semnalul de intrare ideal.
                     </p>
+                    <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                        <button onclick="window.open('https://i.imgur.com/your-liquidity-sweep-image.png', '_blank')" style="background: rgba(77, 159, 255, 0.2); border: 2px solid #4d9fff; color: #4d9fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 0.9em; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='rgba(77, 159, 255, 0.3)'" onmouseout="this.style.background='rgba(77, 159, 255, 0.2)'">
+                            📸 View Example
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Risk Management -->
                 <div style="background: rgba(0, 204, 136, 0.1); border-left: 4px solid #00cc88; padding: 20px; border-radius: 10px; margin-bottom: 0;">
                     <h3 style="color: #00cc88; margin-bottom: 15px; font-size: 1.4em; display: flex; align-items: center; gap: 10px;">
-                        <span>🛡️</span> Risk Management
+                        <span>🛡️</span> Risk Management - The5%ers Rules
                     </h3>
                     <ul style="margin: 0; padding-left: 25px; color: #ccc;">
-                        <li style="margin-bottom: 10px;"><strong>Risk per trade:</strong> Maximum 1-2% din capital</li>
+                        <li style="margin-bottom: 10px;"><strong>Daily Loss Limit:</strong> Maximum $500 (5% of account)</li>
+                        <li style="margin-bottom: 10px;"><strong>Total Loss Limit:</strong> Maximum $600 (6% of account)</li>
+                        <li style="margin-bottom: 10px;"><strong>Profit Target:</strong> $600 (6% gain) to pass HighStake</li>
+                        <li style="margin-bottom: 10px;"><strong>Risk per trade:</strong> 1-2% din capital</li>
                         <li style="margin-bottom: 10px;"><strong>Stop Loss:</strong> Plasat sub/peste zona de Supply/Demand</li>
                         <li style="margin-bottom: 10px;"><strong>Take Profit:</strong> Minimum 1:2 Risk-Reward Ratio</li>
                         <li style="margin-bottom: 0;"><strong>Partial Closes:</strong> Exit parțial la niveluri cheie pentru a securiza profit</li>
@@ -1039,8 +1063,8 @@ let isLoggedIn = false;
 
 // Credentials
 const CREDENTIALS = {
-    username: 'Cristian',
-    password: 'Alessio07'
+    username: 'calexi07',
+    password: '101994acs!'
 };
 
 // Active filters
